--- a/index.html
+++ b/index.html
@@ -8,16 +8,48 @@
     <h1>Задание</h1>
 
     <h2>Вставка изображения</h2>
-    <p>Вставьте изображение с интернета:</p>
+    <p>Вставьте изображение с интернета:
+        <img src="https://avatars.mds.yandex.net/i?id=21378698946e13e41390b16a8ac18553_l-6383479-images-thumbs&n=13.jpg" alt="описание картинки" width="400px" hight="200px">
+    </p>
     <h2>Картинка-ссылка</h2>
-    <p>Сделайте изображение ссылкой на Google:</p>
+    <p>Сделайте изображение ссылкой на Google:
+        <a href="http://google.com">
+            <img src="https://avatars.mds.yandex.net/i?id=76884c7ff714d36411a7d5d9a1fda293_l-9051313-images-thumbs&n=13" width="300px" hight="200px">
+        </a>
+    </p>
     <h2>Вложенный список</h2>
-    <p>Создайте список:</p>
+    <p>Создайте список:
+        <ul>
+            лылыл
+            <li>djjdjfj</li>
+            <li>dkjfjjed</li>
+            <ol>
+                <li>dpdpdp</li>
+                <li>dkdkdkkd</li>
+            </ol>
+            <li>llflfl</li>
+        </ul>
+    </p>
     <h2>Список определений</h2>
-    <p>Создайте список определений:</p>
+    <p>Создайте список определений:
+        <dl>
+            <dt>lgogjidg</dt>
+            <dd>ldldldld</dd>
+            <dt>dpdpdpdp</dt>
+            <dd>pdpdpdp</dd>
+        </dl>
+    </p>
     <h2>Тег <pre></h2>
-    <p>Используйте тег &lt;pre&gt; для сохранения форматирования:</p>
+    <p>Используйте тег &lt;pre&gt; для сохранения форматирования:
+        <pre>
+            «В пустоте средь безжизненных звёзд и планет
+             Мы мчимся сквозь время, храня свой обет
+             Несёмся сквозь темень, минуя миры,
+             Пытаясь найти светоч нашей души…».
+        </pre>
+    </p>
     <h2>Форматирование текста</h2>
-    <p>Сделайте этот текст <b>жирным</b> и <u>подчеркнутым</u>:</p>
+    <p>Сделайте этот текст <b>жирным</b> и <u>подчеркнутым</u>:
+    <b><u>этот текст жирный и подчеркнутый</u></b></p>
     </body>
 </html>
